dejo reglas funcionando